# p2p_messenger

./: .gitignore  CMakeLists.txt  README.md
docs/: PROTOCOL.md  README.md  message_example.json  payload_example.json  payload_schema.json  rfc_message.txt  schema.json
lib/: CMakeLists.txt  README.md
lib/src/: address.h  boost_json.cpp  chatpage.cpp  chatpage.h  chatpage.ui  cli_client.cpp  client.cpp  datagram.h  datagram_deserializer.cpp  datagram_deserializer.h  datagram_serializer.cpp  datagram_serializer.h  destination.cpp  dht_ip_resolver.cpp  dht_ip_resolver.h  ip_resolver.h  login_hasher.cpp  login_hasher.h  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.h  message_deserializer.cpp  message_deserializer.h  message_receiver.cpp  message_receiver.h  message_sender.cpp  message_sender.h  message_serializer.cpp  message_serializer.h  p2p_messenger.cpp  p2p_messenger.h  p2p_messenger.ui  p2p_messenger_impl.cpp  p2p_messenger_impl.h  p2pmessenger.cpp  (+12 more)
lib/tests/: datagram_serializer_deserializer_tests.cpp  datagram_utils.cpp  datagram_utils.h  message_deserializer_tests.cpp  message_serializer_deserializer_tests.cpp  message_serializer_tests.cpp  message_utils.cpp  message_utils.h  payload_deserializer_tests.cpp  payload_serializer_tests.cpp  payload_utils.cpp  payload_utils.h  static_file_ip_resolver_tests.cpp
lib/tests/static/: login_to_ip.txt
src/: chat_history.cpp  chat_history.h  chatpage.cpp  chatpage.h  chatpage.ui  cli_client.cpp  contact.h  dht_ip_resolver.cpp  dht_ip_resolver.h  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  message.h  message_deserializer.cpp  message_deserializer.h  message_receiver.cpp  message_receiver.h  message_sender.cpp  message_sender.h  message_serializer.cpp  message_serializer.h  metadata_ip_resolver.cpp  metadata_ip_resolver.h  p2p_messenger_impl.cpp  p2p_messenger_impl.h  p2pmessenger.cpp  p2pmessenger.ui  payload.h  payload_deserializer.cpp  payload_deserializer.h  payload_serializer.cpp  payload_serializer.h  signed_message.h  udp_hole_puncher.cpp  udp_hole_puncher.h
tests/: destinantion_public_key_from_buffer.cpp  encrypted_message_serializer_deserializer_tests.cpp  encrypted_payload_serializer_deserializer_tests.cpp  message_serializer_deserializer_tests.cpp  message_utils.cpp  message_utils.h  message_with_not_decrypted_payload_serializer_deserializer_tests.cpp  payload_serializer_deserializer_tests.cpp  payload_utils.cpp  signed_message_serializer_deserializer_tests.cpp  signed_message_utils.cpp  signed_message_utils.h
